done with my first playthru
just more copyediting for now

--- a/utils/ALA_deaths.cfg
+++ b/utils/ALA_deaths.cfg
@@ -116,7 +116,7 @@
         [/message]
         [message]
             speaker=Glauco
-            message= _ "You led us where you promised, hunter, and we'll make not vain your end!"
+            message= _ "You led us where you promised, hunter, and we'll make sure your end was not in vain!"
         [/message]
         {INCIDENTAL_MUSIC sad.ogg}
         {VARIABLE divaid_alive false}
@@ -131,7 +131,7 @@
         [/filter]
         [message]
             speaker=Croquet
-            message= _ "They will be damned! I'll avenge you, my little!"
+            message= _ "They will be damned! I'll avenge you, my little one!"
         [/message]
         {INCIDENTAL_MUSIC sad.ogg}
         {VARIABLE fangy_alive false}
@@ -144,7 +144,8 @@
         [/filter]
         [message]
             speaker=Divaid
-            message= _ "Damned! I'll avenge you, my friends!"
+            # FIXME: gives "wolfs" instead of "wolves" when $second_unit is a wolf:
+            message= _ "Damned $second_unit.race|s! I'll avenge you, my friend!"
         [/message]
         {INCIDENTAL_MUSIC sad.ogg}
         {VARIABLE ranfy_alive false}
