--- a/utils/ALA_dialogues.cfg
+++ b/utils/ALA_dialogues.cfg
@@ -614,11 +614,11 @@
     [/message]
     [message]
         speaker=Geobard
-        message= _ "One moment, I know those blue and yellow banners! That's the Gan-Tarkas tribe! In Weldyn that name is well known! He is one of the most powerful and authoritative warlords, and although he's officially part of the Northern Alliance, he has never given up to claim these border lands, including those we have crossed to reach the Nereids. If he has come here, he must have a specific purpose, and I don't think that it's to make a holiday."
+        message= _ "One moment, I know those blue and yellow banners! That's the Gan-Tarkas tribe! In Weldyn that name is well known! He is one of the most powerful and authoritative warlords, and although he's officially part of the Northern Alliance, he has never given up his claim on these border lands, including those we have crossed to reach the Nereids. If he has come here, he must have a specific purpose, and I don't think that it's to make a holiday."
     [/message]
     [message]
         speaker=Glauco
-        message= _ "But if he had warlike intent, why didn't he take advantage of our absence to put them into practice? He has a huge army with him and he would have won easily."
+        message= _ "But if he had warlike intent, why didn't he take advantage of our absence to put such an intent into practice? He has a huge army with him and he would have won easily."
     [/message]
     [message]
         speaker=Geobard
@@ -636,7 +636,7 @@
     {MOVE_UNIT id=Gan-Tarkas 19 11}
     [message]
         speaker=Gan-Tarkas
-        message= _ "What honor, commander Glauco, your fame as an exterminator of snakes precedes you, and as somebody tells to me, also your fame as an exterminator of lizards. I don't put in the list that too-swollen goblin Grunto, he was so weak and stupid, a disgrace to his race. In what way can I reply to such honor?"
+        message= _ "What an honor, commander Glauco! Your fame as an exterminator of snakes precedes you, and, as somebody tells to me, also your fame as an exterminator of lizards. <span size='small'>(I'm not including that over-swollen goblin Grunto in that list; he was so weak and stupid, a disgrace to his race.)</span> In what way can I reply to such an honor?"
     [/message]
     [message]
         speaker=Glauco
@@ -644,7 +644,7 @@
     [/message]
     [message]
         speaker=Gan-Tarkas
-        message= _ "The answer is easy, Amoran pushed me down here. Oh, not that there has ever been anything that deserved my interest in those four falling houses in the last few decades, until someone from Amoran destroyed a tribe of orcs! They were spineless, sure, but they were still orcs."
+        message= _ "The answer is easy: Amoran brought me down here. Oh, not that there has ever been anything that deserved my interest in those four falling houses in the last few decades, until someone from Amoran destroyed a tribe of orcs! They were spineless, sure, but they were still orcs."
     [/message]
     [message]
         speaker=Glauco
@@ -668,8 +668,9 @@
     [/message]
     [message]
         speaker=Gan-Tarkas
-        # FIXME: I don't think "indemnify" is used correctly here:
-        message= _ "I know well they will be angry for the destruction of Amoran, but I'll retire immediately, I will make an act of contrition, I will say that I wanted to avenge Grunto and I'll indemnify Wesnoth with a little of gold. But in the meantime there will be nothing here, in the west, that Wesnoth may be interested to defend; and with the time I'll return, stealthily, to take all these territories, and my tribe will become the most powerful tribe of orcs on the whole continent!"
+        # I thought the usage of "indemnify" here was wrong at first, but then I checked and I guess it works like this after all...
+        # it still might be worth rewording anyways, though.
+        message= _ "I know well they will be angry for the destruction of Amoran, but I'll retire immediately, I will make an act of contrition, I will say that I wanted to avenge Grunto and I'll indemnify Wesnoth with a little bit of gold. But in the meantime there will be nothing here, in the west, that Wesnoth may be interested to defend; and with the time I'll return, stealthily, to take all these territories, and my tribe will become the most powerful tribe of orcs on the whole continent!"
     [/message]
     [message]
         speaker=Glauco
