--- a/utils/ALA_story.cfg
+++ b/utils/ALA_story.cfg
@@ -77,16 +77,16 @@ He departed full of enthusiasm and arrived at his destination full of ideas, all
 #enddef
 
 #define SCENARIO_06_STORY_01
-    story=_ "Having defeated the Saurians and re-established the trade relations with the Nereids, Glauco could finally return to Amoran bringing with him a lot of good news; to think that the town could relive the ancient splendor was not yet possible, but, besides the renewed traffic of amber, the wild lands were a little less savage than before, and this could attract settlers from the west; could attract people endowed with courage and spirit of initiative, qualities that, for Glauco, were worth more than a few pieces of gold."
+    story=_ "Having defeated the Saurians and re-established the trade relations with the Nereids, Glauco could finally return to Amoran bringing with him a lot of good news. To think that the town could relive its past splendor was not yet possible, but, besides the renewed traffic of amber, the wild lands were a little less savage than before, and this could attract settlers from the west; could attract people endowed with courage and spirit of initiative, qualities that, for Glauco, were worth more than a few pieces of gold."
 #enddef
 
 #define SCENARIO_06_STORY_02
-    story=_ "But, having come to the town, Glauco had to see that someone, with a lot of fighting spirit and sense of initiative, had already arrived, but had not brought anything that the good and peaceful people of Amoran could really appreciate. Where the small field of the Grunto's tribe had arisen for the short space of a few days, there was now a solid Orcish fortress, and the number of huts surrounding it announced the presence of a considerable number of orcs."
+    story=_ "But, having come to the town, Glauco had to see that someone, with a lot of fighting spirit and sense of initiative, had already arrived, but had not brought anything that the good and peaceful people of Amoran could really appreciate. Where the small field camp of Grunto's tribe had arisen for the short space of a few days previously, there was now a solid Orcish fortress, and the number of huts surrounding it announced the presence of a considerable number of orcs."
 #enddef
 
 #define SCENARIO_06_STORY_03
     # wmllint: directory spellings Glubtrub
-    story=_ "Suddenly, Glauco was extremely happy that the men he had with him had accumulated a good combat experience; and he was as much happy that Glubtrub and his people, struck by the sudden curiosity to see how a human town was made, were still with him."
+    story=_ "Suddenly, Glauco was extremely happy that the men he had with him had accumulated a good amount of combat experience; and he was as much happy that Glubtrub and his ogres, struck by the sudden curiosity to see how a human town was made, were still with him."
 #enddef
 
 #define EPILOGUE_STORY_01
