--- a/scenarios/04_The_Bloody_Hills.cfg
+++ b/scenarios/04_The_Bloody_Hills.cfg
@@ -319,7 +319,8 @@
         [unit]
             side=1
             id=Mimord
-            # FIXME: A unit with berserk is a terrible matchup against all the bats; give him something to counteract their "drain" ability:
+            # Since a unit with berserk is a terrible matchup against all the bats, I've tried to give him something to counteract their "drain" ability,
+            # but I haven't tested it yet; see the object below:
             type=Dwarvish Berserker
             name="Mimord"
             unrenamable=yes
@@ -329,6 +330,14 @@
                 {TRAIT_STRONG}
                 {TRAIT_RESILIENT}
                 {TRAIT_HEALTHY}
+                # Stolen from IftU; untested here:
+                [object]
+                    silent=yes
+                    [effect]
+                        apply_to=status
+                        add=undrainable
+                    [/effect]
+                [/object]
             [/modifications]
         [/unit]
 
@@ -379,7 +388,7 @@
                                 [message]
                                     speaker=Mimord
                                     # FIXME: not sure how to reword this:
-                                    message= _ "That's right, stupid ogre! And we missed only you to turn around my home! Well, if I break your head I will not do much damage, you don't hold anything into there!"
+                                    message= _ "That's right, stupid ogre! And we were only missing you to turn around my home! Well, if I break your head I will not do much damage, as you don't hold anything in there!"
                                 [/message]
                                 [message]
                                     speaker=Geobard
