--- a/scenarios/04_The_Bloody_Hills.cfg
+++ b/scenarios/04_The_Bloody_Hills.cfg
@@ -319,8 +319,8 @@
         [unit]
             side=1
             id=Mimord
-            # Since a unit with berserk is a terrible matchup against all the bats, I've tried to give him something to counteract their "drain" ability,
-            # but I haven't tested it yet; see the object below:
+            # Since a unit with berserk is a terrible matchup against all the bats, I've tried to give him something to counteract their "drain" ability;
+            # see the object below:
             type=Dwarvish Berserker
             name="Mimord"
             unrenamable=yes
@@ -330,7 +330,7 @@
                 {TRAIT_STRONG}
                 {TRAIT_RESILIENT}
                 {TRAIT_HEALTHY}
-                # Stolen from IftU; untested here:
+                # Stolen from IftU:
                 [object]
                     silent=yes
                     [effect]
