--- a/scenarios/02a_Battle_with_the_Bandits.cfg
+++ b/scenarios/02a_Battle_with_the_Bandits.cfg
@@ -336,7 +336,7 @@
                             [/message]
                             [message]
                                 speaker=Divaid
-                                message= _ "Ranfy founded somebody!"
+                                message= _ "Ranfy found somebody!"
                             [/message]
                         [/then]
                         [else]
@@ -461,7 +461,7 @@
             [else]
                 [message]
                     speaker=second_unit
-                    message= _ "This is the reward for yours crimes, from all the people of this land, Dadoc the bandit!"
+                    message= _ "This is the reward for your crimes, you dirty bandit Dadoc, in the name of all the people of this land!"
                 [/message]
             [/else]
         [/if]
@@ -497,7 +497,7 @@
         [/message]
         [message]
             speaker=Glauco
-            message= _ "Damn, he escaped us. We must come back to Amoran with a failure!"
+            message= _ "Damn, he escaped us. We must return to Amoran as failures!"
         [/message]
         {INCIDENTAL_MUSIC defeat.ogg}
         [endlevel]
