--- a/utils/ALA_dialogues.cfg
+++ b/utils/ALA_dialogues.cfg
@@ -513,8 +513,8 @@
     [/message]
     [message]
         speaker=Glauco
-        # TODO: reword:
-        message= _ "My greetings! I'm the commander Glauco, from Amoran; I came here with the intention of reopening the old Amber Road, of which, in Wesnoth, someone came back to be interested."
+        # This is about as well as I can reword this:
+        message= _ "My greetings! I'm the commander Glauco, from Amoran; I came here to reopen the old Amber Road! There is someone in Wesnoth who came back from here who is mighty interested in it!"
     [/message]
     [message]
         speaker=Joralda
