--- a/scenarios/04_The_Bloody_Hills.cfg
+++ b/scenarios/04_The_Bloody_Hills.cfg
@@ -349,12 +349,12 @@
             [then]
                 [message]
                     speaker=Mimord
-                    # TODO: reword:
-                    message= _ "Damned wolves, I thought I had taught you not to enter in my house! Well, I'll do a wrap with your fur!"
+                    #po: I'm assuming the "wrap" referred to here is an article of clothing:
+                    message= _ "Damned wolves, I thought I had taught you not to come into my house! Well, I'll make a wrap out of your fur!"
                 [/message]
                 [message]
                     speaker=Croquet
-                    message= _ "Ehi you! Put down your hands from my little Fangy!"
+                    message= _ "Hey you! Get your hands off my little Fangy!"
                 [/message]
             [/then]
             [else]
@@ -367,7 +367,7 @@
                         [message]
                             speaker=Mimord
                             #po: a "capon" is a rooster that has been castrated or neutered:
-                            message= _ "Ugly bird! Wolves and bats were not enough around here? I'll make you end like a capon!"
+                            message= _ "Ugly bird! Wolves and bats were not enough around here? I'll wring your neck like a capon!"
                         [/message]
                         [message]
                             speaker=Divaid
@@ -387,8 +387,8 @@
                                 [/message]
                                 [message]
                                     speaker=Mimord
-                                    # FIXME: not sure how to reword this:
-                                    message= _ "That's right, stupid ogre! And we were only missing you to turn around my home! Well, if I break your head I will not do much damage, as you don't hold anything in there!"
+                                    # This is about as well as I think I can reword this:
+                                    message= _ "That's right, stupid ogre! And we were only missing you to complete my home! Well, if I break your head I will not do much damage, as you don't hold anything in there!"
                                 [/message]
                                 [message]
                                     speaker=Geobard
@@ -398,7 +398,7 @@
                             [else]
                                 [message]
                                     speaker=unit
-                                    message= _ "Ehi! There is somebody here!"
+                                    message= _ "Hey! There's somebody here!"
                                 [/message]
                             [/else]
                         [/if]
