more dialogue editing

--- a/scenarios/05_The_Lizards_Islands.cfg
+++ b/scenarios/05_The_Lizards_Islands.cfg
@@ -107,7 +107,7 @@
                 condition=lose
             [/objective]
             [objective]
-                description= _ "Death di Geobard"
+                description= _ "Death of Geobard"
                 condition=lose
             [/objective]
             [objective]
@@ -215,7 +215,7 @@
         [/fire_event]
         [message]
             speaker=Joralda
-            message= _ "More monsters are coming from the north; they are like those before!"
+            message= _ "More monsters are coming from the north; they're like the ones from before!"
         [/message]
     [/event]
 
