--- a/utils/ALA_deaths.cfg
+++ b/utils/ALA_deaths.cfg
@@ -23,6 +23,7 @@
         [/filter]
         [message]
             speaker=Geobard
+            #po: "di" is short for "die"
             message= _ "Aah! I've come so... far... only... to di..."
         [/message]
         {INCIDENTAL_MUSIC defeat.ogg}
@@ -59,7 +60,7 @@
         [/message]
         [message]
             speaker=Glauco
-            message= _ "Ho no, without Croquet, who will lead us through the wild lands?"
+            message= _ "Oh no, without Croquet, who will lead us through the wild lands?"
         [/message]
         {INCIDENTAL_MUSIC defeat.ogg}
         [endlevel]
@@ -78,7 +79,7 @@
         [/message]
         [message]
             speaker=Glauco
-            message= _ "Ho no, without Croquet, who will lead us through the wild lands?"
+            message= _ "Oh no, without Croquet, who will lead us through the wild lands?"
         [/message]
         {INCIDENTAL_MUSIC defeat.ogg}
         [endlevel]
@@ -99,7 +100,7 @@
         [/message]
         [message]
             speaker=Glauco
-            message= _ "You've been helpful for us, Croquet, and we'll remember you as a friend!"
+            message= _ "You've been helpful to us, Croquet, and we'll remember you as a friend!"
         [/message]
         {INCIDENTAL_MUSIC sad.ogg}
         {VARIABLE croquet_alive false}
