--- a/utils/ALA_dialogues.cfg
+++ b/utils/ALA_dialogues.cfg
@@ -77,6 +77,7 @@
     [/message]
     [message]
         speaker=Geobard
+        #po: "Weldyn" is used as metonymy here:
         message= _ "These are not things that the higher-ups discuss with me, of course, but the leaked rumors speak of a renewed interest, in Wesnoth, for amber, so Weldyn took the opportunity to see what the situation is here. It seems that I will have to report about a problematic situation."
     [/message]
     [message]
@@ -85,7 +86,7 @@
     [/message]
     [message]
         speaker=Geobard
-        message= _ "This state of affairs must change; That's why I was ordered to be available to the officer who serves here as the local commander."
+        message= _ "This state of affairs must change! That's why I was ordered to be available to the officer who serves here as the local commander."
     [/message]
     [message]
         speaker=Glauco
@@ -130,7 +131,7 @@
     [message]
         speaker=Divaid
         # "I and my friend" works, too, but "Me and my friend" sounds more natural:
-        message= _ "There's me, here, representative of Wesnoth's busybodies! Me and my friend Ranfy. And this may also be territory of Wesnoth, but I will have a blow if it isn't the first time I've seen its colors in at least... forty years! What are you doing here right now?"
+        message= _ "There's me, here, representative of Wesnoth's busybodies! Me and my friend Ranfy. And this may also be territory of Wesnoth, but punch me if it isn't the first time I've seen its colors in at least... forty years! What are you doing here right now?"
     [/message]
     [message]
         speaker=Glauco
@@ -145,7 +146,7 @@
     [/message]
     [message]
         speaker=Glauco
-        message= _ "Attention! A monster!"
+        message= _ "Watch out! A monster!"
     [/message]
     [message]
         speaker=Divaid
@@ -153,7 +154,7 @@
     [/message]
     [message]
         speaker=Glauco
-        message= _ "You seem to know this place well, why don't you help us? Eliminating Dadoc will save a little of work for your... nice friend."
+        message= _ "You seem to know this place well, why don't you help us? Eliminating Dadoc will save a little bit of work for your... nice friend."
     [/message]
     [message]
         speaker=Divaid
@@ -161,11 +162,11 @@
     [/message]
     [message]
         speaker=Glauco
-        message= _ "After take Dadoc, we'll go to east to meet the nereids; could you come with us as a guide? I desperately need of someone which knows the wildlands, and I'll pay him well."
+        message= _ "After we bring Dadoc to justice, we'll go to east to meet the nereids; could you come with us as a guide? I have a desperate need someone who knows the wildlands, and I'll pay well."
     [/message]
     [message]
         speaker=Divaid
-        message= _ "To the coast? For all the Demons, it's a very long time that I don't see the sea, and Ranfy never saw it; it might be a good opportunity to show him the sea; what do you say Ranfy, we give a hand to these yahoos of town?"
+        message= _ "To the coast? Well I'll be damned, it's been a very long time in which I haven't seen the sea, and Ranfy has never seen it... it might be a good opportunity to show him the sea... what do you say Ranfy, shall we give a hand to these yahoos from the town?"
     [/message]
     [sound]
         name=gryphon-shriek-1.ogg,gryphon-shriek-2.ogg
@@ -177,7 +178,7 @@
     [/message]
     [message]
         speaker=Divaid
-        message= _ "You are a lucky man, mister commander of the Amoran's garrison! My friend, here, says that he likes you! So, my new companions, things are like this: Dadoc has a certain number of shelters, in the forest, where he disperses his band when they don't have to act; to find Dadoc we will have to rummage through them one by one, and if we are lucky we will find Dadoc immediately; if we have misfortune we will have to explore them all; but we may not have the time to do so."
+        message= _ "You are a lucky man, mister commander of the Amoran's garrison! My friend, here, says that he likes you! So, my new companions, things are like this: Dadoc has a certain number of shelters, in the forest, where he disperses his band when they don't have to act. To find Dadoc we will have to rummage through them one by one, and if we are lucky we will find Dadoc immediately; if we have misfortune we will have to explore them all; but we may not have the time to do so."
     [/message]
     [message]
         speaker=Glauco
@@ -201,7 +202,7 @@
     [message]
         speaker=Glauco
         #po: a "corvee" is when laborers do unpaid work for one specific task:
-        message= _ "You have right, Geobard, this plain is completely bare; but look the forest to our right! Organize a corvee that takes logs from it to build a fence here."
+        message= _ "You've got that right, Geobard, this plain is completely bare; but look to the forest to our right! Organize a corvee that takes logs from it to build a fence here."
     [/message]
     [message]
         speaker=Geobard
@@ -255,7 +256,7 @@
 #define 02B_CROQUET_INTRODUCTION
     [message]
         speaker=Croquet
-        message= _ "This is my home, busybody, mine and Fangy's, of course! You, on the other hand... what business does a soldier of Wesnoth have in the territory of that thief of Grunto?"
+        message= _ "This is my home, busybody, mine and Fangy's, of course! You, on the other hand... what business does a soldier of Wesnoth have in the territory of that orcish thief, Grunto?"
     [/message]
     [message]
         speaker=Glauco
