--- a/utils/ALA_dialogues.cfg
+++ b/utils/ALA_dialogues.cfg
@@ -166,7 +166,7 @@
     [/message]
     [message]
         speaker=Divaid
-        message= _ "To the coast? Well I'll be damned, it's been a very long time in which I haven't seen the sea, and Ranfy has never seen it... it might be a good opportunity to show him the sea... what do you say Ranfy, shall we give a hand to these yahoos from the town?"
+        message= _ "To the coast? Well I'll be damned, it's been awhile since I last saw the sea, and Ranfy has <i>never</i> seen it... it might be a good opportunity to show him the sea... what do you say Ranfy, shall we give a hand to these yahoos from the town?"
     [/message]
     [sound]
         name=gryphon-shriek-1.ogg,gryphon-shriek-2.ogg
@@ -178,7 +178,7 @@
     [/message]
     [message]
         speaker=Divaid
-        message= _ "You are a lucky man, mister commander of the Amoran's garrison! My friend, here, says that he likes you! So, my new companions, things are like this: Dadoc has a certain number of shelters, in the forest, where he disperses his band when they don't have to act. To find Dadoc we will have to rummage through them one by one, and if we are lucky we will find Dadoc immediately; if we have misfortune we will have to explore them all; but we may not have the time to do so."
+        message= _ "You are a lucky man, mister commander of Amoran's garrison! My friend, here, says that he likes you! So, my new companions, things are like this: Dadoc has a certain number of shelters, in the forest, where he disperses his band when they don't have to act. To find Dadoc we will have to rummage through them one by one, and if we are lucky we will find Dadoc immediately; if we have misfortune we will have to explore them all; but we may not have the time to do so."
     [/message]
     [message]
         speaker=Glauco
@@ -197,7 +197,7 @@
 #define 02B_INTRODUCTION
     [message]
         speaker=Geobard
-        message= _ "Commander, it seems we managed to get here without being sighted by the orcs, but from here to the orc fortress the plain does not offer any holds or hiding places; we have to attack from here."
+        message= _ "Commander, it seems we managed to get here without being sighted by the orcs, but from here to the orc fortress, the plain does not offer any protection or hiding places; we have to attack from here."
     [/message]
     [message]
         speaker=Glauco
@@ -260,7 +260,7 @@
     [/message]
     [message]
         speaker=Glauco
-        message= _ "That orc attacked Amoran some days ago, and we have come to equalize the accounts! But who is Fangy?"
+        message= _ "That orc attacked Amoran some days ago, and we have come to even the accounts! But who is Fangy?"
     [/message]
 #enddef
 
@@ -275,6 +275,7 @@
     [/message]
     [message]
         speaker=Croquet
+        #po: a more literal translation might use "housewife" instead of "home lady" but since "lady" is also used to refer to Fangy later, it can stay here as well:
         message= _ "Here, the only beasts are you, Wesnothians! She is Fangy, my little home lady. She keeps rats and orcs away from our beautiful forest. Bah! Since you came here to make the party at Grunto, I'll have to help you. I haven't forgiven him for stealing Fangy's last litter, to have mounts for his Goblins. And then, since westerners from the city like you can't know much about these lands, I'm afraid you'll need someone who knows them better than you!"
     [/message]
     [message]
@@ -407,7 +408,7 @@
     {SCOUT_MESSAGE ( _ "Well, gentlemen, since you don't want to spend a few weeks climbing the mountains further south (which I think is a good idea since the wilds become even more wild in those mountains), we have just to find a road that leads us on the other side of this territorry, through the bloody hills.")}
     [message]
         speaker=Glauco
-        message= _ "What's the problem? The season is good, the weather is beautiful, these hills were safe when the amber caravans passed through them!"
+        message= _ "What's the problem? The season is good, the weather is beautiful, and these hills were safe when the amber caravans passed through them!"
     [/message]
     {SCOUT_MESSAGE ( _ "Too bad that those times are over before you were born, commander! In the past the road was quiet because the few remaining dwarves lived in the mines that they exploited for centuries; these mines have been exhausted for a while, but some dwarves still extracted something that allowed them to trade with the caravan workers; when the caravans ceased, the dwarves raised their heels and left!")}
     [message]
@@ -434,7 +435,7 @@
 #define 04_MIMORD_INTRODUCTION
     [message]
         speaker=Mimord
-        message= _ "By my grandfather's beard! Some humans, and even... Wesnoth soldiers? What the hell are you doing here?"
+        message= _ "By my grandfather's beard! Some humans, and even... Wesnothian soldiers? What the hell are you doing here?"
     [/message]
     [message]
         speaker=Glauco
@@ -467,7 +468,7 @@
     [/message]
     [message]
         speaker=Mimord
-        message= _ "Understood! You did a great deal, commander Glauco! But, for my cousin's hammer, you are a merchant of the tough ones; to get my services for nothing... my compliments, really."
+        message= _ "Understood! You did a great deal, commander Glauco! But, by my cousin's hammer, you're one tough merchant, to get my services for nothing... my compliments, really."
     [/message]
     [message]
         speaker=Glauco
@@ -494,15 +495,15 @@
 #define 04_WOLVES
     [message]
         speaker=Divaid
-        message= _ "And for us not to miss anything, here are the wolves!"
+        message= _ "And just so we won't miss anything, here are the wolves!"
     [/message]
     [message]
         speaker=Croquet
-        message= _ "And for us not to miss anything, here are the wolves! Beh, maybe Fangy could find a cute one and enlarge the family!"
+        message= _ "And just so we won't miss anything, here are the wolves! Beh, maybe Fangy could find a cute one and enlarge the family!"
     [/message]
     [message]
         speaker=Glauco
-        message= _ "Ehi! I'm not complaining about what is lacking!"
+        message= _ "Well, hey! I'm not complaining about what is lacking!"
     [/message]
 #enddef
 
@@ -523,7 +524,7 @@
     [/message]
     [message]
         speaker=Glauco
-        message= _ "Oh, for that, we are already used to face problems of any kind! What's the ones here?"
+        message= _ "Oh, for that, we are already used to facing problems of any kind! What's the ones here?"
     [/message]
     [message]
         speaker=Joralda
@@ -531,7 +532,7 @@
     [/message]
     [message]
         speaker=Glubtrub
-        # "leatherish" was originally "coriaceous" but that doesn't seem like a word that an ogre would know:
+        #po: "leatherish" was originally "coriaceous" but that doesn't seem like a word that an ogre would know:
         message= _ "Urca! Lizards more worst mess, more leatherish of snakes to chew, more hard squash them, small, fast, sting with lance and makes strange things with cold light!"
     [/message]
     [message]
@@ -584,7 +585,7 @@
     [/message]
     [message]
         speaker=Glauco
-        message= _ "Understand! Guys, pay attention to all three of the big snakes; they are much worse than the nagas!"
+        message= _ "Understood! Guys, pay attention to all three of the big snakes; they are much worse than the nagas!"
     [/message]
 #endif
 #enddef
@@ -596,11 +597,11 @@
     [/message]
     [message]
         speaker=Joralda
-        message= _ "Not before having properly celebrated this victory! Your help has spared many grief to my people, and we must show you our gratitude for this; we also need to develop details on amber shipments, which could start this autumn."
+        message= _ "Not before having properly celebrated this victory! Your help has spared much grief to my people, and we must show you our gratitude for this; we also need to develop details on amber shipments, which could start this autumn."
     [/message]
     [message]
         speaker=Glauco
-        message= _ "With great pleasure, and not only the mine, right Glubtrub?"
+        message= _ "With great pleasure, and not only mine, right Glubtrub?"
     [/message]
     [message]
         speaker=Glubtrub
