--- a/utils/ALA_dialogues.cfg
+++ b/utils/ALA_dialogues.cfg
@@ -58,15 +58,43 @@
 #enddef
 
 #define 01_GEOBARD_ARRIVALS
+    [store_unit]
+        variable=geobard_store
+        kill=no
+        [filter]
+            id=Geobard
+        [/filter]
+    [/store_unit]
     [message]
         speaker=Geobard
         message= _ "What's happening here? There is a fight!"
     [/message]
-    [message]
-        speaker=Glauco
-        # TODO: he's a dragoon on EASY:
-        message= _ "Glad to see you, cavalryman! We have a little problem with some orcs and some bandits, as you can see, and your arrival is welcome, albeit unexpected!"
-    [/message]
+    [switch]
+        variable=geobard_store.type
+        [case]
+            # Should never be reached as things are now, but in case we change things in the future:
+            value=Cavalier
+            [message]
+                speaker=Glauco
+                message= _ "Glad to see you, sir cavalier! We have a little problem with some orcs and some bandits, as you can see, and your arrival is welcome, albeit unexpected!"
+            [/message]
+        [/case]
+        [case]
+            # EASY:
+            value=Dragoon
+            [message]
+                speaker=Glauco
+                message= _ "Glad to see you, sir dragoon! We have a little problem with some orcs and some bandits, as you can see, and your arrival is welcome, albeit unexpected!"
+            [/message]
+        [/case]
+        [else]
+            # All other difficulties:
+            [message]
+                speaker=Glauco
+                message= _ "Glad to see you, cavalryman! We have a little problem with some orcs and some bandits, as you can see, and your arrival is welcome, albeit unexpected!"
+            [/message]
+        [/else]
+    [/switch]
     [message]
         speaker=Geobard
         message= _ "At Soradoc they have had some inkling of strange movements by orcs not part of the Northern Alliance, so they sent messengers to all the eastern villages, and I have been sent here!"
@@ -96,11 +124,33 @@
         speaker=Geobard
         message= _ "Incredible! Anyway, I don't think I'm wrong by putting me on your orders, commander...?"
     [/message]
-    [message]
-        speaker=Glauco
-        # TODO: he's a dragoon on EASY:
-        message= _ "Sergeant Glauco, cavalryman, and I hope to be worthy of your confidence! And now let's rid out this rabble!"
-    [/message]
+    [switch]
+        variable=geobard_store.type
+        [case]
+            # Should never be reached as things are now, but in case we change things in the future:
+            value=Cavalier
+            [message]
+                speaker=Glauco
+                message= _ "Sergeant Glauco at your service, sir cavalier, and I hope to be worthy of your confidence! And now let's rid out this rabble!"
+            [/message]
+        [/case]
+        [case]
+            # EASY:
+            value=Dragoon
+            [message]
+                speaker=Glauco
+                message= _ "That'd be Sergeant Glauco, sir dragoon, and I hope to be worthy of your confidence! And now let's rid out this rabble!"
+            [/message]
+        [/case]
+        [else]
+            # All other difficulties:
+            [message]
+                speaker=Glauco
+                message= _ "...commander? Well, technically I'm only a sergeant, but since you're only a cavalryman, I guess I still outrank you... Anyways, that's Sergeant Glauco to you, cavalryman, and I hope to be worthy of your confidence! And now let's rid out this rabble!"
+            [/message]
+        [/else]
+    [/switch]
+    {CLEAR_VARIABLE geobard_store}
 #enddef
 
 #define 02A_INTRODUCTION_01
