minor text update

--- a/_main.cfg
+++ b/_main.cfg
@@ -54,7 +54,7 @@
     [about]
         title = _ "Campaign Maintenance"
         [entry]
-            name = "Always Argesilao, for the moment"
+            name = "Argesilao (formerly)"
         [/entry]
         [entry]
             name = "Eric Gallager (egallager, a.k.a. cooljeanius)"
@@ -62,7 +62,7 @@
     [/about]
 
     [about]
-        title = _ "Great Ogre chara design and configuration"
+        title = _ "Great Ogre character design and configuration"
         [entry]
             name = "Eagle_11"
         [/entry]
