wmllint magic comments

--- a/scenarios/05_The_Lizards_Islands.cfg
+++ b/scenarios/05_The_Lizards_Islands.cfg
@@ -229,6 +229,7 @@
             name=create_sea_monsters
         [/fire_event]
         [message]
+            # wmllint: recognize Geobard
             speaker=Geobard
             message= _ "I hope these are the last ones! They make me feel seasick with all their contortions!"
         [/message]
