--- a/scenarios/06_The_Last_Battle.cfg
+++ b/scenarios/06_The_Last_Battle.cfg
@@ -450,6 +450,7 @@
         side=2,3
     [/kill]
     [message]
+        # wmllint: recognize Geobard
         speaker=Geobard
         message= _ "Those damned are all dead or escaped! Finally we finished!"
     [/message]
@@ -479,10 +480,12 @@
         [/kill]
         [if]
             [have_unit]
+                # wmllint: recognize Hisskiss
                 id=Hisskiss
             [/have_unit]
             [then]
                 [message]
+                    # wmllint: recognize Glubtrub
                     speaker=Glubtrub
                     message= _ "To remain only to squash big snake!"
                 [/message]
