--- a/utils/ALA_dialogues.cfg
+++ b/utils/ALA_dialogues.cfg
@@ -582,6 +582,7 @@
     [/message]
     [message]
         speaker=Glubtrub
+        # wmllint: local spellings leatherish
         #po: "leatherish" was originally "coriaceous" but that doesn't seem like a word that an ogre would know:
         message= _ "Urca! Lizards more worst mess, more leatherish of snakes to chew, more hard squash them, small, fast, sting with lance and makes strange things with cold light!"
     [/message]
