--- a/scenarios/04_The_Bloody_Hills.cfg
+++ b/scenarios/04_The_Bloody_Hills.cfg
@@ -353,6 +353,7 @@
                     message= _ "Damned wolves, I thought I had taught you not to come into my house! Well, I'll make a wrap out of your fur!"
                 [/message]
                 [message]
+                    # wmllint: recognize Croquet
                     speaker=Croquet
                     message= _ "Hey you! Get your hands off my little Fangy!"
                 [/message]
@@ -370,6 +371,7 @@
                             message= _ "Ugly bird! Wolves and bats were not enough around here? I'll wring your neck like a capon!"
                         [/message]
                         [message]
+                            # wmllint: recognize Divaid
                             speaker=Divaid
                             message= _ "Don't you dare to touch my friend Ranfy, tattooed midget!"
                         [/message]
@@ -391,6 +393,7 @@
                                     message= _ "That's right, stupid ogre! And we were only missing you to complete my home! Well, if I break your head I will not do much damage, as you don't hold anything in there!"
                                 [/message]
                                 [message]
+                                    # wmllint: recognize Geobard
                                     speaker=Geobard
                                     message= _ "Wait, that ogre is with us!"
                                 [/message]
