--- a/scenarios/01_The_Attack_to_Amoran.cfg
+++ b/scenarios/01_The_Attack_to_Amoran.cfg
@@ -60,6 +60,37 @@
     {STARTING_VILLAGES_AREA 1 20 19 5}
     {STARTING_VILLAGES_AREA 1 9 17 5}
 
+#define ENEMY_AI_GOALS
+    [goal]
+        [criteria]
+            side=1
+            canrecruit=yes
+        [/criteria]
+        value={ON_DIFFICULTY 7 6 5}
+    [/goal]
+    [goal]
+        [criteria]
+            id=Glauco
+        [/criteria]
+        value={ON_DIFFICULTY 8 7 6}
+    [/goal]
+    [goal]
+        name=target_location
+        [criteria]
+            x,y=20,19 # The tile with the "Amoran" label
+        [/criteria]
+        value={ON_DIFFICULTY 9 8 7}
+    [/goal]
+    [goal]
+        name=protect_location
+        [criteria]
+            x,y=20,19 # The tile with the "Amoran" label
+        [/criteria]
+        protect_radius={ON_DIFFICULTY 3 2 1}
+        value={ON_DIFFICULTY 4 3 2}
+    [/goal]
+#enddef
+
     [side]
         side=2
         controller=ai
@@ -77,6 +108,10 @@
         canrecruit=yes
         x,y=20,1
         ai_special=guardian
+        facing=s
+        [ai]
+            {ENEMY_AI_GOALS}
+        [/ai]
     [/side]
     {STARTING_VILLAGES_AREA 2 20 1 9}
 
@@ -97,7 +132,13 @@
         canrecruit=yes
         x,y=34,20
         ai_special=guardian
+        facing=nw
+        [ai]
+            {ENEMY_AI_GOALS}
+        [/ai]
     [/side]
+
+#undef ENEMY_AI_GOALS
 
     [event]
         name=prestart
@@ -120,24 +161,40 @@
         {NAMED_LOYAL_UNIT 1 (Spearman) 17 21 (Sempronius) ("Sempronius")}
         {NAMED_LOYAL_UNIT 1 (Bowman) 21 23 (Pretonius) ("Petronius")}
 
-        {LOYAL_UNIT 2 (Orcish Archer) 18 3}
-        {LOYAL_UNIT 2 (Orcish Grunt) 22 3}
-        {LOYAL_UNIT 2 (Orcish Grunt) 19 5}
-        {LOYAL_UNIT 2 (Orcish Archer) 23 7}
+#define FACING_S
+        [+unit]
+            facing=s
+        [/unit]
+#enddef
+
+        {LOYAL_UNIT 2 (Orcish Archer) 18 3} {FACING_S}
+        {LOYAL_UNIT 2 (Orcish Grunt) 22 3} {FACING_S}
+        {LOYAL_UNIT 2 (Orcish Grunt) 19 5} {FACING_S}
+        {LOYAL_UNIT 2 (Orcish Archer) 23 7} {FACING_S}
 #ifdef HARD
-        {LOYAL_UNIT 2 (Orcish Archer) 20 4}
-        {LOYAL_UNIT 2 (Orcish Grunt) 22 5}
+        {LOYAL_UNIT 2 (Orcish Archer) 20 4} {FACING_S}
+        {LOYAL_UNIT 2 (Orcish Grunt) 22 5} {FACING_S}
 #endif
 
-        {LOYAL_UNIT 3 (Ruffian) 33 19}
-        {LOYAL_UNIT 3 (Thug) 32 19}
-        {LOYAL_UNIT 3 (Footpad) 32 20}
-        {LOYAL_UNIT 3 (Thief) 32 21}
-        {FLAG_VARIANT6 ragged}
+#undef FACING_S
+
+
+#define FACING_NW
+        [+unit]
+            facing=nw
+        [/unit]
+#enddef
+
+        {LOYAL_UNIT 3 (Ruffian) 33 19} {FACING_NW}
+        {LOYAL_UNIT 3 (Thug) 32 19} {FACING_NW}
+        {LOYAL_UNIT 3 (Footpad) 32 20} {FACING_NW}
+        {LOYAL_UNIT 3 (Thief) 32 21} {FACING_NW}
 #ifdef HARD
-        {LOYAL_UNIT 3 (Thug) 32 18}
-        {LOYAL_UNIT 3 (Footpad) 32 22}
+        {LOYAL_UNIT 3 (Thug) 32 18} {FACING_NW}
+        {LOYAL_UNIT 3 (Footpad) 32 22} {FACING_NW}
 #endif
+
+#undef FACING_NW
 
         {SET_LABEL 17 12 ( _ "The Ford of Amoran") }
         {SET_LABEL 20 19 ( _ "Amoran") }
