more "facing" modification
and a bit of copyediting

--- a/scenarios/02a_Battle_with_the_Bandits.cfg
+++ b/scenarios/02a_Battle_with_the_Bandits.cfg
@@ -152,14 +152,22 @@
 
         # ***** Glauco's army *****
 
-        {GENERIC_UNIT 1 (Bowman) 5 2 }
-        {GENERIC_UNIT 1 (Spearman) 6 2 }
-        {GENERIC_UNIT 1 (Bowman) 4 3 }
-        {GENERIC_UNIT 1 (Spearman) 5 4 }
+#define FACING_SE
+        [+unit]
+            facing=se
+        [/unit]
+#enddef
+
+        {GENERIC_UNIT 1 (Bowman) 5 2 } {FACING_SE}
+        {GENERIC_UNIT 1 (Spearman) 6 2 } {FACING_SE}
+        {GENERIC_UNIT 1 (Bowman) 4 3 } {FACING_SE}
+        {GENERIC_UNIT 1 (Spearman) 5 4 } {FACING_SE}
 #ifndef HARD
-        {GENERIC_UNIT 1 (Bowman) 4 2 }
-        {GENERIC_UNIT 1 (Spearman) 6 3 }
+        {GENERIC_UNIT 1 (Bowman) 4 2 } {FACING_SE}
+        {GENERIC_UNIT 1 (Spearman) 6 3 } {FACING_SE}
 #endif
+
+#undef FACING_SE
 
         [recall]
             id=Geobard
@@ -234,6 +242,7 @@
             name="Divaid"
             side=1
             x,y=10,4
+            facing=nw
             {IS_HERO}
             [modifications]
                 {TRAIT_LOYAL}
@@ -255,6 +264,7 @@
             name="Ranfy"
             side=1
             x,y=10,3
+            facing=sw
             [modifications]
                 {TRAIT_LOYAL}
                 {TRAIT_RESILIENT}
