--- a/scenarios/03_The_Nagas_Nest.cfg
+++ b/scenarios/03_The_Nagas_Nest.cfg
@@ -142,6 +142,8 @@
 
         {UNSTORE_HEROES 6 12}
 
+        # TODO: modify which direction they're facing
+
         {03_INTRODUCTION_DIALOGUE}
 
         [store_locations]
