--- a/utils/ALA_dialogues.cfg
+++ b/utils/ALA_dialogues.cfg
@@ -37,7 +37,7 @@
     [/message]
     [message]
         speaker=Glauco
-        message=_ "If necessary we'll call the peasants and the woodmen to help us."
+        message=_ "If necessary we'll call the peasants and the woodsmen to help us."
     [/message]
     [message]
         speaker=Grunto
@@ -200,7 +200,7 @@
     [/message]
     [message]
         speaker=Divaid
-        message= _ "The only \"monstrous\" thing here, Wesnothians, is your ignorance! He's Ranfy; I adopted him when he was still an egg! Since then he's been helping me to hunt and to keep mice and bandits away from our home, bandits like your friend Dadoc, who, I fear, you'll have to look for in the forest. Well, good luck, because you'll need a lot of it!"
+        message= _ "The only “monstrous” thing here, Wesnothians, is your ignorance! He's Ranfy; I adopted him when he was still an egg! Since then he's been helping me to hunt and to keep mice and bandits away from our home, bandits like your friend Dadoc, who, I fear, you'll have to look for in the forest. Well, good luck, because you'll need a lot of it!"
     [/message]
     [message]
         speaker=Glauco
